********** SPL 1.6 Release Candidate 2 **********
===== Build 0089 2019/05/07 =====

* Moved class 'StringBuilder' from string_builder.sp to util.sp
* Added new library json.sp
* Functional updates:
    * Hidden function __kw_unpack__
* Bug fixes:
    * StringBuilder.to_string() generates error
    * Re-declare warning shows at wrong time
    * return {...} misidentified as a block statement

********** SPL 1.6 Release Candidate **********
===== Build 0088 2019/05/06 =====

* Added some docstrings

********** SPL 1.6 Beta 12 **********
===== Build 0087 2019/05/06 =====

* New built-in function:
    * id()
* Bug fixes:
    * instanceof not work for python types
    * string() not work for classes with __str__ not defined
    * memory_view() recurse infinitely to circular references

********** SPL 1.6 Beta 11 **********
===== Build 0086 2019/05/05 =====

* Added the error traceback of eval()

********** SPL 1.6 Beta 10 **********
===== Build 0085 2019/05/04 =====

* SGL updates
* IDLE Updates
* Error traceback now printed to system.stderr

********** SPL 1.6 Beta 9 **********
===== Build 0084 2019/05/04 =====

* Change the NativeType 'List' to 'Array'
* Added new native function 'array()'
* Implemented 'List' in SPL, in lang.sp
* Functional updates:
    * SPL object __iter__ can now return a native iterable object
    * Hidden function __unpack__
* New native function:
    * get_env()
* New library:
    * util.sp:
        * memory_view()
* New SGL widget:
    * TreeView
* Bug fixes:
    * Access of Class might be blocked by constructor in class

********** SPL 1.6 Beta 8 **********
===== Build 0083 2019/05/03 =====

* Optimized function call
* Updated native function help():
    * Changed the output of 'help' to system.stdout
    * Added the help for module

********** SPL 1.6 Beta 7 **********
===== Build 0082 2019/05/02 =====

* Structural optimization:
    * Moved all spl *.py files into /bin
    * Added a new function checking the spl path
* Updated idle.sp
